--- a/prueba3.html
+++ b/prueba3.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>CSS Basics</title>
+    <style>
+    h1 {
+        color:thistle;
+    }
+    boby {
+        background-color: blue;
+    }
+    </style>
 </head>
 <body>
     <h1><em>SaharaToursGo!</em></h1>
