--- a/prueba3.html
+++ b/prueba3.html
@@ -11,7 +11,7 @@
         color:thistle;
     }
     boby {
-        background-color: blue;
+        background-color: rgb(red, green, blue);
     }
     </style>
 </head>
