--- a/prueba3.html
+++ b/prueba3.html
@@ -10,7 +10,7 @@
     h1 {
         color:thistle;
     }
-    boby {
+    body {
         background-color: rgb(red, green, blue);
     }
     </style>
