--- a/prueba3.html
+++ b/prueba3.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <time>Documento</time>
+    <title>Documento</title>
     <title>CSS Basics</title>
     <style>
     h1 {
         color:thistle;
     }
     body {
-        background-color: rgb(red, green, blue);
+        background-color:royalblue;
     }
     </style>
 </head>
