--- a/prueba3.html
+++ b/prueba3.html
@@ -15,6 +15,6 @@
     </style>
 </head>
 <body>
-    <h1><em>SaharaToursGo!</em></h1>
+   <center><h1><em>SaharaToursGo!</em></h1></center>
 </body>
 </html>
