--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1>Estudiante: Fabiola Soliz</h1>
+    <h1>Estudiante: Adriana Sanchez </h1>
     <img src="imagenes/profile.png" alt="My Profile Picture">
   </header> 
   <main>
@@ -24,7 +24,7 @@
  
   <footer>
     <p>
-      &copy;2019 Faviola Soliz - Location: Bolivia  
+      &copy;2019 Adriana Sanchez Rocha - Location: Bolivia  
       <a href="http://www.upds.edu.bo/"> UPDS - Cbba.</a>
     </p>
   </footer>
