--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main>
     <h2>Tecnologia Web - Assignment Portal</h2>
     <ul>
-      <li>Asignacion 1:<a href="https://kitthy.github.io/TecnologiaWeb/prueba3">Prueba1</a></li>
+      <li>Asignacion 1:<a href="https://kitthy.github.io/TecnologiaWeb/prueba3">Prueba</a></li>
       <li>Asignacion 2:<a href="#">HTML Markup Validation</a></li>
     </ul>
   </main> 
