--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
   <header>
     <h1>Estudiante: Adriana Sanchez </h1>
-    <img src="imagenes/kitthy.jpg" alt="My Profile Picture">
+    <img src="imagenes/kitthy.jpg" width="100" alt="My Profile Picture">
   </header> 
   <main>
-    <h2>Tecnologia Web - Assignment Portal</h2>
+    <h2>Tecnologia Web - Practicas </h2>
     <ul>
       <li>Asignacion 1:<a href="https://kitthy.github.io/TecnologiaWeb/prueba3">Prueba</a></li>
-      <li>Asignacion 2:<a href="#">HTML Markup Validation</a></li>
+      <li>Asignacion 2:<a href="https://kitthy.github.io/TecnologiaWeb/prueba2">Prueba2</a></li>
     </ul>
   </main> 
  
