--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <main>
     <h2>Tecnologia Web - Practicas </h2>
     <ul>
-      <li>Asignacion 1:<a href="https://kitthy.github.io/TecnologiaWeb/prueba3">Prueba</a></li>
-      <li>Asignacion 2:<a href="https://kitthy.github.io/TecnologiaWeb/prueba2">Prueba2</a></li>
+      <li>Asignacion 1:<a href="Asignaciones/asignacion1/Prac1.pdf">Site Plan</a></li>
+      <li>Asignacion 2:<a href="">Prueba2</a></li>
     </ul>
   </main> 
  
