--- a/prac1.html
+++ b/prac1.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-</style>
+</html> style>
       <link href="styles/main.css">     
-  </head>
+  <head>
   <div id="header">
   <div id="siteTitle">The Quad-Cities Transporation Center</div>
       <div id="subTitle">"We have your transporation needs covered!"  </div>
   </div>
     
     <div id="nav">
+<body>
     <ul>
         <li><a href="#" class="current">Home</a></li>
     <li><a href="products/">Products</a></li>
@@ -53,3 +54,5 @@
 
 </div>
 </body>
+</head>
+</html>
