--- a/prac1.html
+++ b/prac1.html
@@ -1,58 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-</html> style>
-      <link href="styles/main.css">     
-  <head>
-  <div id="header">
-  <div id="siteTitle">The Quad-Cities Transporation Center</div>
-      <div id="subTitle">"We have your transporation needs covered!"  </div>
-  </div>
-    
-    <div id="nav">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 <body>
+    <h1>The Quad-Cities Transporation Center</h1>
+    <h2>"We have your transporation needs covered!"</h2>
     <ul>
-        <li><a href="#" class="current">Home</a></li>
-    <li><a href="products/">Products</a></li>
-    <li><a href="services/">Services</a></li>
-        <li><a href="locations/">Locations</a></li>
-        <li><a href="about/">About Us</a></li>
-        <li><a href="contact/">Contact Us</a></li>
-                <li><a href="search/">Search</a></li>
+            <li><a href="#" class="current">Home</a></li>
+          <li><a href="products/">Productos</a></li>
+          <li><a href="services/">Servicios</a></li>
+          <li><a href="locations/">Locaciones</a></li>
+          <li><a href="about/">Sobre Nosotros</a></li>
+          <li><a href="contact/">Contactos</a></li>
+                    <li><a href="search/">Buscar</a></li>
     </ul>
-    </div>
-<div id="main">
-<div>
+    <p></p>
     <img src="http://lorempixel.com/300/200/transport" width="300" height="200">
-    <h3>Featured Products & Services</h3>        
-<p></p>
- <ul>
-  <li>Logistics</li>
-  <li>Repair</li>
-  <li>Parts</li>
-    <ul><li>Part Category 1
-    <li>Part Category 2</li>
-    <li>Part Category 3</li></ul>
-  <li>Communication</li>
- </ul>
- <div class="style1 right">
- Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dictum urna dui. Ut imperdiet facilisis sapien. Nunc ultrices sem eget ligula hendrerit pulvinar non et tellus. Ut dignissim vel ipsum sagittis faucibus. Aenean iaculis eleifend nulla id rhoncus. Cras velit leo, maximus et finibus a, molestie eget quam. 
- </div><br><br><br><br>
- <img src="http://lorempixel.com/300/200/transport"/>
- <p>Locations
- <ol>
-     <li><a HREF="http://www.clarkston.com/business-directory-2/">Clarkston Washington</a></li>
-  <li><a href="http://www.lewiston.com/business-directory-2-2/">LEWISTON IDAHO</a></li>
-    <li><a href="http://www.moscow.com/business-directory-2/">Moscow ID</li>
- 
-     <marquee>Subscribe to our Newsletter to get daily specials emailed to you directly!!</marquee>
- <div id="footer">
-  <p>To find out more, contact Bobby at 4455.
- </p></div>
- <div id="footer">
-  <p>Copyright -C- 2016 |  The Quad-Cities Transporation Center   | Spokane Washington </p class="smaller">
- </div>
-
-</div>
+    <p></p>
+    <h3>Productos y Servicios destacados</h3>
+    <p></p>
+    <ul>
+          <li>Logistica</li>
+          <li>Repartir</li>
+          <li>Partes</li>
+          <ul>
+              <li>Categoria de parte 1 </li>
+              <li>Categoria de parte 2</li>
+              <li>Categoria de parte 3</li>
+          </ul>
+          <li>Comunicacion</li>
+    </ul>
+      <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+      <h3>Integer dictum urna dui. Ut imperdiet facilisis sapien.</h3> 
+      <h3>Nunc ultrices sem eget ligula hendrerit pulvinar non et tellus.</h3> 
+      <h3>Ut dignissim vel ipsum sagittis faucibus. Aenean iaculis eleifend nulla id rhoncus.</h3> 
+      <h3>Cras velit leo, maximus et finibus a, molestie eget quam.</h3> 
+            <img src="http://lorempixel.com/300/200/transport"/>
+            <h2>Locaciones</h2>
+            <ol>
+            <li><a HREF="http://www.clarkston.com/business-directory-2/">Clarkston Washington</a></li>
+            <li><a href="http://www.lewiston.com/business-directory-2-2/">LEWISTON IDAHO</a></li>
+            <li><a href="http://www.moscow.com/business-directory-2/">Moscow ID</li>
+    <marquee>Subscribe to our Newsletter to get daily specials emailed to you directly!!</marquee> 
+    <p></p>
+    <h2><a>To find out more, contact Bobby at 4455.</a></h2>
+    <p></p>
+   <h2><a>Copyright -C- 2016 |  The Quad-Cities Transporation Center   | Spokane Washington </a> </h2 class="smaller">      
 </body>
 </head>
 </html>
+
+       
+
