--- a/prac1.html
+++ b/prac1.html
@@ -33,11 +33,7 @@
           </ul>
           <li>Comunicacion</li>
     </ul>
-      <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-      <h3>Integer dictum urna dui. Ut imperdiet facilisis sapien.</h3> 
-      <h3>Nunc ultrices sem eget ligula hendrerit pulvinar non et tellus.</h3> 
-      <h3>Ut dignissim vel ipsum sagittis faucibus. Aenean iaculis eleifend nulla id rhoncus.</h3> 
-      <h3>Cras velit leo, maximus et finibus a, molestie eget quam.</h3> 
+      <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Integer dictum urna dui. Ut imperdiet facilisis sapien.Nunc ultrices sem eget ligula hendrerit pulvinar non et tellus. Ut dignissim vel ipsum sagittis faucibus. Aenean iaculis eleifend nulla id rhoncus. Cras velit leo, maximus et finibus a, molestie eget quam.</h4> 
             <img src="http://lorempixel.com/300/200/transport"/>
             <h2>Locaciones</h2>
             <ol>
