--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>Tecnologia Web - Practicas </h2>
     <ul>
       <li>Asignacion 1:<a href="Asignaciones/asignacion1/Prac1.pdf">Site Plan</a></li>
-      <li>Asignacion 2:<a href="">Prueba2</a></li>
+      <li>Asignacion 2:<a href="https://kitthy.github.io/TecnologiaWeb/prac1.html">HTML markup validacion</a></li>
     </ul>
   </main> 
  
