--- a/ProyectoPrueba.html
+++ b/ProyectoPrueba.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1><center>¡SaharaToursGo!</center></h1>
-    <center><img src="imagenes/fondo.jpg" width="100"></center>
+    <center><img src="imagenes/fondo.jpg"></center>
     <main>
-        
+
     </main>
 </body>
 </html>
