--- a/ProyectoPrueba.html
+++ b/ProyectoPrueba.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="imagenes/Llogo.jpg"width="50"><h1><center>¡SaharaToursGo!</center></h1><img src="imagenes/Llogo.jpg"width="50">
+    <h1><center><img src="imagenes/Llogo.jpg"width="50">¡SaharaToursGo!<img src="imagenes/Llogo.jpg"width="50"></center></h1><img src="imagenes/Llogo.jpg"width="50">
     <center><img src="imagenes/fondo.jpg"></center>
     <main>
 
