--- a/ProyectoPrueba.html
+++ b/ProyectoPrueba.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><center><img src="imagenes/Llogo.jpg"width="50">¡SaharaToursGo!<img src="imagenes/Llogo.jpg"width="50"></center></h1><img src="imagenes/Llogo.jpg"width="50">
-    <center><img src="imagenes/fondo.jpg"></center>
+    <h1><center><img src="imagenes/Llogo.jpg"width="80">¡SaharaToursGo!<img src="imagenes/Llogo.jpg"width="80"></center></h1><img src="imagenes/Llogo.jpg"width="50">
+    <center><img src="imagenes/fondo.jpg" width="100"></center>
     <main>
 
     </main>
