--- a/ProyectoPrueba.html
+++ b/ProyectoPrueba.html
@@ -7,10 +7,21 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><center><img src="imagenes/Llogo.jpg"width="80">¡SaharaToursGo!<img src="imagenes/Llogo.jpg"width="80"></center></h1>
-    <center><img src="imagenes/fondo.jpg" width="100"></center>
+    <title><center><img src="imagenes/Llogo.jpg"width="100">¡SaharaToursGo!<img src="imagenes/Llogo.jpg"width="100"></center></title>
+    <center><img src="imagenes/fondo.jpg" width="300"></center>
     <main>
-
+          <ul>
+              <li>Marrakech</li>
+              <li>Ouarzazate</li>
+              <li>Ait Ben Haddou </li>
+              <li>Fez</li>
+              <li>Valle del Dades y las Gargantas del Toudra</li>
+              <li>Essaouira</li>
+              <li>El Jadida </li>
+              <li>Chefchaouen</li>
+              <li>Merzouga y las dunas de Erg Chebi</li>
+              <li>Rabat</li>
+          </ul>
     </main>
 </body>
 </html>
