--- a/ProyectoPrueba.html
+++ b/ProyectoPrueba.html
@@ -9,8 +9,8 @@
 <body>
     <title><center><img src="imagenes/Llogo.jpg"width="100">¡SaharaToursGo!<img src="imagenes/Llogo.jpg"width="100"></center></title>
     <center><img src="imagenes/fondo.jpg" width="300"></center>
-    <main>
-          <ul>
+
+          <ul><center>
               <li>Marrakech</li>
               <li>Ouarzazate</li>
               <li>Ait Ben Haddou </li>
@@ -21,7 +21,6 @@
               <li>Chefchaouen</li>
               <li>Merzouga y las dunas de Erg Chebi</li>
               <li>Rabat</li>
-          </ul>
-    </main>
+          </ul></center>
 </body>
 </html>
