--- a/ProyectoPrueba.html
+++ b/ProyectoPrueba.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>¡SaharaToursGo!</title>
 </head>
 <body>
-    <title><center><img src="imagenes/Llogo.jpg"width="100">¡SaharaToursGo!<img src="imagenes/Llogo.jpg"width="100"></center></title>
+    <h1><center><img src="imagenes/Llogo.jpg"width="100">¡SaharaToursGo!<img src="imagenes/Llogo.jpg"width="100"></center></h1>
     <center><img src="imagenes/fondo.jpg" width="300"></center>
 
           <ul><center>
