--- a/ProyectoPrueba.html
+++ b/ProyectoPrueba.html
@@ -10,7 +10,7 @@
     <h1><center><img src="imagenes/Llogo.jpg"width="100">¡SaharaToursGo!<img src="imagenes/Llogo.jpg"width="100"></center></h1>
     <center><img src="imagenes/fondo.jpg" width="300"></center>
 
-          <ul><center>
+        <center><ul>
               <li>Marrakech</li>
               <li>Ouarzazate</li>
               <li>Ait Ben Haddou </li>
@@ -21,6 +21,6 @@
               <li>Chefchaouen</li>
               <li>Merzouga y las dunas de Erg Chebi</li>
               <li>Rabat</li>
-          </ul></center>
+        </center></ul>
 </body>
 </html>
