--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <ul>
       <li>Asignacion 1:<a href="Asignaciones/asignacion1/Prac1.pdf">Site Plan</a></li>
       <li>Asignacion 2:<a href="https://kitthy.github.io/TecnologiaWeb/prac1.html">HTML markup validacion</a></li>
-      <li>Asignacion 3:<a href="h">PruebaProyectoFinal</a></li>
+      <li>Asignacion 3:<a href="https://kitthy.github.io/TecnologiaWeb/ProyectoPrueba.html">PruebaProyectoFinal</a></li>
     </ul>
   </main> 
  
