--- a/Marrakech.html
+++ b/Marrakech.html
@@ -26,10 +26,10 @@
         </ul></nav>
     </header>
     <main>
-        <h2>¿PORQUE IR DE VIAJE A MARRUECOS?</h2>
-        <P>Si Marruecos está en tu lista de viajes seguramente ya has tenido algún acercamiento con esta cultura, y antes de darte las razones para emprender tu viaje, queremos asegurarnos que sabes que vas a vivir una experiencia cultural en un país musulmán.</P>
-        <p>Marruecos está separado de Europa solo por el Estrecho de Gibraltar, es la puerta de entrada al continente africano y llegar allí desde el sur de España es realmente sencillo. Las Mezquitas, los Hammam (baños públicos), las Madrazas (escuelas o universidades), las Medinas (barrio antiguo árabe “mercados”), se hacen presentes en las ciudades marroquís que también tienen un color característico.</p>
-        <p>Lugares como Fez, Marrakech, Meknes y Rabat son coloniales, mientras que Casablanca y Tánger son comerciales, todas deberían estar contempladas en tu itinerario. Aquí, la lista de 10 buenas razones por las que deberías dar un paso más hacia Marruecos.</p>
+        <h2>¿POEQUE VISITAR MARRAKECH?</h2>
+        <P>Como otras ciudades imperiales marroquíes, Marrakech está dividida fundamentalmente en dos partes: el centro con la gran Medina o ciudad vieja, rodeada de espectaculares bastiones de tierra roja, y, fuera de las murallas, la ville nouvelle o ciudad nueva, construida por los franceses en los años del dominio colonial y en continua expansión.</P>
+        <p>De ahí su sobrenombre de "ciudad roja". La Medina de Marrakech está llena de antiguos palacios y mezquitas, que como es costumbre en Marruecos, no están abiertas a los no musulmanes. Su lugar más emblemático es la gran plaza de Jamaa el Fna.</p>
+        <p>Al oeste de los bastiones de la Medina se extiende la ville nouvelle, con los barrios de Guéliz e Hivernage; la arteria principal es la Avenue Mohammed V, una amplia avenida arbolada que desemboca junto a una de las puertas de la ciudad vieja. En dirección este, finalmente, se encuentra el barrio residencial de la Palmeraie, una zona semidesértica llena de palmeras que en los últimos años se ha llenado de edificios.</p>
         <img src="imagenes/marruecos.jpg" width ="300">
         <h2>MONTAR EN CAMELLO Y DORMIR EN EL DESIERTO</h2>
         <P>Otra de las actividades que no te puedes perder cuando estás visitando Marruecos, es ir al desierto del Sahara, este majestuoso espacio natural en donde podrás vivir la experiencia de hacer un trayecto en camello y sortear las dunas imaginándote que este era el recorrido que tenían que hacer en la antigüedad para comercializar los elementos principales y para la supervivencia de muchas de las tribus que habitaban África.</P>
