--- a/Marrakech.html
+++ b/Marrakech.html
@@ -37,22 +37,22 @@
             <p>Es la ciudad vieja, protegida por un cordón de bastiones hechos de tierra roja que encierran un laberinto de callejuelas y palacios, mercados y mezquitas, cúpulas y minaretes. La Medina de Marrakech ha sido declarada como Patrimonio de la Humanidad por la Unesco en el año 1985, siendo actualmente uno de los lugares de visita obligada</p>
             <P> Su corazón es la gran plaza Jamaa el Fna, al norte de la cual se abre el laberinto de los Suks (mercados tradicionales, a menudo descubiertos). Siguiendo hacia el norte se encuentran la mezquita y madraza de Ben Youssef y el Museo de Marrakech. Al sur de la plaza, en cambio, a lo largo de los siglos se han instalado los gobernantes de la ciudad. Hoy la zona está dominada por el Palacio Real, erigido sobre las ruinas de los precedentes palacios almohades, que ocupa una vastísima área rodeada de murallas (la llamada kasbah, que significa ciudadela fortificada) y no está abierto al público.</P>
             <p>Pero se puede visitar el palacio de la Bahía y de Dar Si Said, construidos en el siglo XIX por dos visires de los sultanes y las imponentes ruinas del gran palacio Badi.</p>
-            <img src="" width ="300">
+            <img src="imagenes/medina1jpg.jpg" width ="300">
             <li>LA GUÈLIZ</li>
             <P>Es el núcleo principal de la ciudad nueva, construido por los franceses en los años treinta. El barrio es menos característico que la Medina, pero también animado. Aquí es donde se concentran los grandes hoteles internacionales y los restaurantes, las tiendas y los no muy numerosos locales nocturnos de la ciudad</P>
-            <img src="" width ="300">
+            <img src="imagenes/gueliz.jpg" width ="300">
             <li>LA HIVERNAGE</li>
             <P>Al sur de Guéliz y un poco al oeste de la Medina se encuentra este pequeño barrio residencial que alberga villas particulares y hoteles internacionales de cinco estrellas, así como el nuevo Teatro de la Ópera y el Palacio de Congresos.</P>
-            <img src="" width ="300">
+            <img src="imagenes/hivernage.jpg" width ="300">
             <li>LA PALMERAIE</li>
             <P> Este vasto oasis de tierra pelada y palmeras se extiende al noreste de la Medina.Es la última frontera de los millonarios de Marrakech, marroquíes y extranjeros, que se han construido residencias de lujo, con jardines exuberantes y a menudo circundadas de altos muros para proteger la privacidad de los residentes y sus huéspedes.</P>
             <P>Algunas son hoteles de lujo, como el Hotel Jnane Tamsna, una distinguida infraestructura en estilo ecléctico que hospeda a las estrellas de Hollywood que pasan por la ciudad, o Les Deux Tour, proyectado por el arquitecto más famoso de la ciudad, Charles Boccarà. Es una especie de Beverly Hills a la marroquí, donde se rige la norma del total respeto por las palmeras de modo que ninguna construcción puede dañar o interferir en el crecimiento de las palmeras.</P>
-            <img src="" width ="300">
+            <img src="imagenes/palmeraie.jpg" width ="300">
             <li>LA MELLAH</li>
             <P>Algunas son hoteles de lujo, como el Hotel Jnane Tamsna, una distinguida infraestructura en estilo ecléctico que hospeda a las estrellas de Hollywood que pasan por la ciudad, o Les Deux Tour, proyectado por el arquitecto más famoso de la ciudad, Charles Boccarà. Es una especie de Beverly Hills a la marroquí, donde se rige la norma del total respeto por las palmeras de modo que ninguna construcción puede dañar o interferir en el crecimiento de las palmeras.</P>
             <P>Su nombre, Meliah, un apelativo común a todos los barrios judíos de las ciudades marroquíes, significa "lugar de la sal", lo cual se remonta a la época del monopolio que los mercaderes judíos tenían del comercio de la sal que se extraía de las montañas del Atlas y que se utilizaba para conservar los alimentos. La comunidad judía de Marrakech tiene un origen muy antiguo.</P>
             <P> A principios del siglo XX contaba con unos 40.000 miembros, pero después de la Segunda Guerra Mundial, durante la cual el rey Mohammed V rechazó aplicar las leyes antisemitas promulgadas por el gobierno francés colaboracionista de Vichy, la mayoría emigró a Francia, Estados Unidos o Israel o se trasladó a Casablanca. Actualmente quedan sólo algunos centenares de personas.</P>
-            <img src="" width ="300">
+            <img src="imagenes/mellah.jpg" width ="300">
         </ul>       
         <h2>LOS MUSEOS EN MARRAKECH</h2>
         <p>Marrakech no es una ciudad de grandes museos y espacios de exposición tradicionales, pero cuenta con interesantes colecciones, públicas y privadas, de arte y artesanía marroquí antigua y contemporánea</p>
@@ -63,22 +63,22 @@
             <p>Galería-café literario convertida en uno de los puntos centrales de la escena artística de la ciudad. Se encuentra en uno de los riads más antiguos de Marrakech, pues data de fines del siglo XVI.</p>
             <p>En ambientes devueltos a su antiguo esplendor y decorados con un gusto impecable, se pueden ver exposiciones de arte contemporáneo o fotografía, asistir a conciertos de música tradicional (gnawa, sufí, etc.) o a presentaciones de libros, o simplemente charlar frente a un vaso humeante de té a la menta, la bebida nacional de Marruecos.</p>
             <p> La idea es de Abdellatif Aït Ben Abdallah, el propietario de Marrakech Riads, una sociedad encargada de la venta y restauración de los riads y que ha restaurado, con gran rigor filológico, el palacio que alberga el centro cultural y otros cinco edificios dispersos por la Medina, transformándolos en maison d'hôtes.</p>
-            <img src="" width ="300">
+            <img src="imagenes/DarCherifa.jpg" width ="300">
             <li>MINISTERIO DEL GUSTO</li>
             <p> Ideado y realizado por los diseñadores italianos Alessandra Lippini y Fabrizio Bizzarri, este excéntrico gran espacio multifuncional se utiliza también como espacio para muestras temporales, cambiando de muestra cada tres meses aproximadamente, dedicadas tanto a artistas marroquíes como internacionales.</p>
-            <img src="" width ="300">
+            <img src="imagenes/misterioDelGosto.jpg" width ="300">
             <li>MUSÈE DAR SI SAID</li>
             <p>Situado en un suntuoso palacio del siglo XIX, expone una rica colección de objetos de arte y artesanía tradicional del sur de Marrruecos, entre los cuales hay piezas de cobre, alfombras, ropas y joyas bereberes, piezas talladas de madera de cedro, puertas, persianas policromas y fragmentos de techos, además de un "minbar", una especie de púlpito transportable, que había sido utilizado en la mezquita Kutubía. El museo fue construido en el siglo XII por artesanos de Córdoba y sus lados están adornados por unos mil paneles decorados.</p>
-            <img src="" width ="300">
+            <img src="imagenes/DarSiSaid.jpg" width ="300">
             <li>MUSÈE DE MARRAKECH</li>
             <p> Inaugurado a fines de los años noventa en un palacio del siglo XIX meticulosamente restaurado, el museo se creó con el fin de tener una colección permanente de arte marroquí contemporáneo y organizar exposiciones y otros eventos culturales. Acoge también una preciosa colección de libros y caligrafía islámica y una recopilación de litografías y acuarelas de temas marroquíes</p>
-            <img src="" width ="300">
+            <img src="imagenes/museede.jpg" width ="300">
             <li>MUSÈE DU JARDIN MAJORELLE</li>
             <p>La villa Majorelle, que hizo construir en los años veinte el pintor Jacques Majorelle y que compró en los años sesenta el famoso estilista francés Yves Saint Laurent, alberga una colección permanente de arte islámico, que hoy se puede visitar junto con el espléndido jardín. Hay joyas tradicionales, bordados, manuscritos miniados, antiguas piezas de madera tallada y una serie de litografías de Majorelle dedicadas al Atlas.</p>
-            <img src="" width ="300">
+            <img src="imagenes/Dujardin.jpg" width ="300">
             <li>MUSÈE TIZKIWIN</li>
             <p> Este pequeño museo privado, que se halla en el palacio del antropólogo-coleccionista holandés Bert Flint, cuenta con una magnífica colección de cerámicas, alfombras, tejidos y ropas bereberes.</p>
-            <img src="" width ="300">
+            <img src="imagenes/tiskiwin.jpg" width ="300">
             </ul>      
     </main>
     <footer>
