--- a/ProyectoPrueba.html
+++ b/ProyectoPrueba.html
@@ -13,7 +13,7 @@
     <img src="imagenes/fondo.jpg" width="300">
 
         <nav><ul>
-              <li>Marrakech</li>
+              <li><a href="https://kitthy.github.io/TecnologiaWeb/Marrakech.html">Marrakech</a></li>
               <li>Ouarzazate</li>
               <li>Ait Ben Haddou </li>
               <li>Fez</li>
