--- a/Marrakech.html
+++ b/Marrakech.html
@@ -13,8 +13,8 @@
     <img src="imagenes/fondo.jpg" width="300">
 
         <nav><ul>
-              <li>Marrakech</li>
-              <li>Ouarzazate</li>
+              <li><a href="https://kitthy.github.io/TecnologiaWeb/Marrakech.html">Marrakech</a></li>
+              <li><a href="https://kitthy.github.io/TecnologiaWeb/Ouarzazate.html"></a>Ouarzazate</li>
               <li>Ait Ben Haddou </li>
               <li>Fez</li>
               <li>Valle del Dades y las Gargantas del Toudra</li>
