--- a/ProyectoPrueba.html
+++ b/ProyectoPrueba.html
@@ -14,7 +14,7 @@
 
         <nav><ul>
               <li><a href="https://kitthy.github.io/TecnologiaWeb/Marrakech.html">Marrakech</a></li>
-              <li><a href="https://kitthy.github.io/TecnologiaWeb/Ouarzazate.html"></a>Ouarzazate</li>
+              <li><a href="https://kitthy.github.io/TecnologiaWeb/Ouarzazate.html">Ouarzazate</a></li>
               <li>Ait Ben Haddou</li>
               <li>Fez</li>
               <li>Valle del Dades y las Gargantas del Toudra</li>
