--- a/Marrakech.html
+++ b/Marrakech.html
@@ -16,7 +16,7 @@
               <li><a href="https://kitthy.github.io/TecnologiaWeb/Marrakech.html">Marrakech</a></li>
               <li><a href="https://kitthy.github.io/TecnologiaWeb/Ouarzazate.html">Ouarzazate</a></li>
               <li><a href="https://kitthy.github.io/TecnologiaWeb/Ouarzazate.html">Ait Ben Haddou</a></li>
-              <li>Fez</li>
+              <li><a href="https://kitthy.github.io/TecnologiaWeb/Fez.html">Fez</a></li>
               <li>Valle del Dades y las Gargantas del Toudra</li>
               <li>Essaouira</li>
               <li>El Jadida </li>
