--- a/ProyectoPrueba.html
+++ b/ProyectoPrueba.html
@@ -17,12 +17,12 @@
               <li><a href="https://kitthy.github.io/TecnologiaWeb/Ouarzazate.html">Ouarzazate</a></li>
               <li><a href="https://kitthy.github.io/TecnologiaWeb/Ouarzazate.html">Ait Ben Haddou</a></li>
               <li><a href="https://kitthy.github.io/TecnologiaWeb/Fez.html">Fez</a></li>
-              <li>Valle del Dades y las Gargantas del Toudra</li>
-              <li>Essaouira</li>
-              <li>El Jadida </li>
-              <li>Chefchaouen</li>
-              <li>Merzouga y las dunas de Erg Chebi</li>
-              <li>Rabat</li>
+              <li><a href ="" >Valle del Dades y las Gargantas del Toudra</a></li>
+              <li><a href ="" >Essaouira</a></li>
+              <li><a href ="" >El Jadida</a></li>
+              <li><a href ="" >Chefchaouen</a></li>
+              <li><a href ="" >Merzouga y las dunas del Erg Chebi</a></li>
+              <li><a href ="" >Rabat</a></li>
         </ul></nav>
     </header>
     <main>
@@ -50,6 +50,7 @@
     <footer>
         <h4>Derechos reservados Universidad Domingo savio</h4> 
         <h4>Tecnologia Web I - UPDS </h4>
+        <li><a href ="" >CONTACTOS</a></li>
     </footer>
 </body>
 </html>
