--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <li>Asignacion 5:<a href="Asignaciones/asignacion5/principal.html">CSS y JavaScript</a></li>
       <li>Asignacion 6:<a href="Asignaciones/asignacion6/principal.html">Galeria de imagenes</a></li>
       <li>Asignacion 7:<a href="Asignaciones/asignacion7/contacto.html">Contactos</a></li>
-      <li>Asignacion 8:<a href=""> </a>Jason</li> 
+      <li>Asignacion 8:<a href="Asignaciones/asignacion8/heroes.html">Jason</a></li> 
       <li>Asignacion 8:<a href=""> </a></li>   
     </ul>
 
