--- a/ValleDelHades.html
+++ b/ValleDelHades.html
@@ -21,8 +21,8 @@
               <li><a href ="" >Essaouira</a></li>
               <li><a href ="" >El Jadida</a></li>
               <li><a href ="" >Chefchaouen</a></li>
-              <li><a href ="" >Merzouga y las dunas del Erg Chebi</a></li>
               <li><a href ="" >Rabat</a></li>
+              <li><a href ="" >Galeria</a></li>
         </ul></nav>
     </header>
     <main>
