--- a/Essaouira.html
+++ b/Essaouira.html
@@ -28,7 +28,7 @@
     <main>
     <article>
         <h2>ESSAOUIRA</h2>
-        <P>Esauira, (en bereber, ⵎⵓⴳⴰⴷⵓⵔ, Mugadur; en árabe, الصويرة Aṣ-Ṣawīra; en francés, Essaouira), también conocida por la antigua denominación de Mogadur, Mogador en portugués y en español,1​ es una ciudad portuaria de Marruecos, situada en la costa occidental atlántica, al norte del cabo Sim.</P>
+        <P>Esauira, también conocida por la antigua denominación de Mogadur, Mogador en portugués y en español,1​ es una ciudad portuaria de Marruecos, situada en la costa occidental atlántica, al norte del cabo Sim.</P>
         <P>Es la capital de la provincia homónima, en la región de Marrakech-Safí. Con cerca de 70.000 habitantes, su medina o centro histórico está catalogado por la Unesco como Patrimonio de la Humanidad desde 2001. La economía del lugar gira en torno a la pesca, la industria maderera, textil y alimentaria, y al comercio de productos de artesanía, marquetería y joyería en particular. Dispone de gasoducto y un aeródromo. Esauira alberga anualmente el Festival de Gnaua y Músicas del Mundo de Esauira que atrae a miles de visitantes</P>
         <img src="imagenes/essaoirita.jpg" alt="ciudad de Essaouira" >  
         <h2>HISTORIA</h2>
