--- a/ProyectoPrueba.html
+++ b/ProyectoPrueba.html
@@ -18,9 +18,9 @@
               <li><a href="https://kitthy.github.io/TecnologiaWeb/Ouarzazate.html">Ait Ben Haddou</a></li>
               <li><a href="https://kitthy.github.io/TecnologiaWeb/Fez.html">Fez</a></li>
               <li><a href ="https://kitthy.github.io/TecnologiaWeb/ValleDelHades.html" >Valle del Dades y las Gargantas del Toudra</a></li>
-              <li><a href ="" >Essaouira</a></li>
-              <li><a href ="" >El Jadida</a></li>
-              <li><a href ="" >Chefchaouen</a></li>
+              <li><a href ="https://kitthy.github.io/TecnologiaWeb/Essaouira.html" >Essaouira</a></li>
+              <li><a href ="https://kitthy.github.io/TecnologiaWeb/Jadida.html" >El Jadida</a></li>
+              <li><a href ="" >n</a></li>
               <li><a href ="" >Rabat</a></li>
               <li><a href ="" >Galeria</a></li>
         </ul></nav>
