--- a/Rabat.html
+++ b/Rabat.html
@@ -18,8 +18,8 @@
               <li><a href="https://kitthy.github.io/TecnologiaWeb/Ouarzazate.html">Ait Ben Haddou</a></li>
               <li><a href="https://kitthy.github.io/TecnologiaWeb/Fez.html">Fez</a></li>
               <li><a href ="https://kitthy.github.io/TecnologiaWeb/ValleDelHades.html" >Valle del Dades y las Gargantas del Toudra</a></li>
-              <li><a href ="" >Essaouira</a></li>
-              <li><a href ="" >El Jadida</a></li>
+              <li><a href ="https://kitthy.github.io/TecnologiaWeb/Essaouira.html" >Essaouira</a></li>
+              <li><a href ="https://kitthy.github.io/TecnologiaWeb/Jadida.html" >El Jadida</a></li>
               <li><a href ="" ></a></li>
               <li><a href ="" >Rabat</a></li>
               <li><a href ="" >Galeria</a></li>
