--- a/ProyectoPrueba.html
+++ b/ProyectoPrueba.html
@@ -20,8 +20,8 @@
               <li><a href ="https://kitthy.github.io/TecnologiaWeb/ValleDelHades.html" >Valle del Dades y las Gargantas del Toudra</a></li>
               <li><a href ="https://kitthy.github.io/TecnologiaWeb/Essaouira.html" >Essaouira</a></li>
               <li><a href ="https://kitthy.github.io/TecnologiaWeb/Jadida.html" >El Jadida</a></li>
-              <li><a href ="" >n</a></li>
-              <li><a href ="" >Rabat</a></li>
+              <li><a href ="" ></a></li>
+              <li><a href ="https://kitthy.github.io/TecnologiaWeb/Rabat.html" >Rabat</a></li>
               <li><a href ="" >Galeria</a></li>
         </ul></nav>
     </header>
