--- a/Rabat.html
+++ b/Rabat.html
@@ -21,7 +21,7 @@
               <li><a href ="https://kitthy.github.io/TecnologiaWeb/Essaouira.html" >Essaouira</a></li>
               <li><a href ="https://kitthy.github.io/TecnologiaWeb/Jadida.html" >El Jadida</a></li>
               <li><a href ="" ></a></li>
-              <li><a href ="" >Rabat</a></li>
+              <li><a href ="https://kitthy.github.io/TecnologiaWeb/Rabat.html" >Rabat</a></li>
               <li><a href ="" >Galeria</a></li>
         </ul></nav>
     </header>
