--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       <li>Asignacion 6:<a href="Asignaciones/asignacion6/principal.html">Galeria de imagenes</a></li>
       <li>Asignacion 7:<a href="Asignaciones/asignacion7/contacto.html">Contactos</a></li>
       <li>Asignacion 8:<a href="Asignaciones/asignacion8/heroes.html">Jason</a></li> 
-      <li>Asignacion 8:<a href=""> </a></li>   
+      <li>Asignacion 9:<a href="Asignaciones/asignacion9/principal.html">Json en el Proyecto Final</a></li>   
+      <li>Asignacion 10:<a href="">API </a></li> 
     </ul>
 
   </main> 
