--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li>Asignacion 7:<a href="Asignaciones/asignacion7/contacto.html">Contactos</a></li>
       <li>Asignacion 8:<a href="Asignaciones/asignacion8/heroes.html">Jason</a></li> 
       <li>Asignacion 9:<a href="Asignaciones/asignacion9/principal.html">Json en el Proyecto Final</a></li>   
-      <li>Asignacion 10:<a href="Asignaciones/asignacion10/principal.html">API </a></li> 
+      <li>Asignacion 10:<a href="Asignaciones/asignacion10/principal.html">ENTREGA FINAL</a></li> 
       <li>Asignacion 11:<a href="Asignaciones/Examen/cbba.html">EXAMEN</a></li> 
     </ul>
 
